src/objects/Discount__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mid-month invoice Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF (
  MONTH( Start_Date__c )  =  MONTH( End_Date__c ),
  &quot;One Time&quot;,
  &quot;Recurring&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Discount</label>
    <nameField>
        <displayFormat>DIS-{00000}</displayFormat>
        <label>Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_end_date_that_is_before_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date can&apos;t be before Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_cant_be_more_than_a_year_fro</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt;= TODAY()+365</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Start Date must less than a year away.</errorMessage>
    </validationRules>
</CustomObject>